--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,5 @@
 @article{EvoMSA,
-author = {Mario Graff and Sabino Miranda{-}Jim{\'{e}}nez
-               and Eric Sadit Tellez and Daniela Moctezuma},
+author = {Graff, Mario and Miranda{-}Jim{\'{e}}nez, Sabino and Tellez, Eric S. and Moctezuma, Daniela},
 title     = {EvoMSA: {A} Multilingual Evolutionary Approach for Sentiment Analysis},
 journal   = {Computational Intelligence Magazine},
 volume    = {15},
@@ -12,18 +11,15 @@ month     = {Feb.}
 }
 
 @article{microTC,
-title = "An automated text categorization framework based on hyperparameter optimization",
-journal = "Knowledge-Based Systems",
-volume = "149",
-pages = "110--123",
-year = "2018",
-issn = "0950-7051",
-doi = "10.1016/j.knosys.2018.03.003",
-url = "https://www.sciencedirect.com/science/article/pii/S0950705118301217",
-author = "Eric S. Tellez and Daniela Moctezuma and Sabino Miranda-Jiménez and Mario Graff",
-keywords = "Text classification",
-keywords = "Hyperparameter optimization",
-keywords = "Text modelling"
+title = {An automated text categorization framework based on hyperparameter optimization},
+journal = {Knowledge-Based Systems},
+volume = {149},
+pages = {110--123},
+year = {2018},
+issn = {0950-7051},
+doi = {10.1016/j.knosys.2018.03.003},
+url = {https://www.sciencedirect.com/science/article/pii/S0950705118301217},
+author = {Tellez, Eric S. and Moctezuma, Daniela and Miranda-Jiménez, Sabino and Graff, Mario}
 }
 
 @article{B4MSA,
@@ -31,10 +27,20 @@ title = {A {Simple} {Approach} to {Multilingual} {Polarity} {Classification} in 
 issn = {0167-8655},
 url = {http://www.sciencedirect.com/science/article/pii/S0167865517301721},
 doi = {10.1016/j.patrec.2017.05.024},
-abstract = {Recently, sentiment analysis has received a lot of attention due to the interest in mining opinions of social media users. Sentiment analysis consists in determining the polarity of a given text, i.e., its degree of positiveness or negativeness. Traditionally, Sentiment Analysis algorithms have been tailored to a specific language given the complexity of having a number of lexical variations and errors introduced by the people generating content. In this contribution, our aim is to provide a simple to implement and easy to use multilingual framework, that can serve as a baseline for sentiment analysis contests, and as a starting point to build new sentiment analysis systems. We compare our approach in eight different languages, three of them correspond to important international contests, namely, SemEval (English), TASS (Spanish), and SENTIPOLC (Italian). Within the competitions, our approach reaches from medium to high positions in the rankings; whereas in the remaining languages our approach outperforms the reported results.},
 urldate = {2017-05-24},
 journal = {Pattern Recognition Letters},
 author = {Tellez, Eric S. and Miranda-Jiménez, Sabino and Graff, Mario and Moctezuma, Daniela and Suárez, Ranyart R. and Siordia, Oscar S.},
-keywords = {Error-robust text representations, Multilingual sentiment analysis, Opinion mining},
 year = {2017}
+}
+
+@article{TELLEZ2017,
+title = {A case study of Spanish text transformations for twitter sentiment analysis},
+journal = {Expert Systems with Applications},
+volume = {81},
+pages = {457-471},
+year = {2017},
+issn = {0957-4174},
+doi = {https://doi.org/10.1016/j.eswa.2017.03.071},
+url = {https://www.sciencedirect.com/science/article/pii/S0957417417302312},
+author = {Tellez, Eric S. and Miranda-Jiménez, Sabino and Graff, Mario and Moctezuma, Daniela and Siordia, Oscar S. and Villaseñor, Elio A.}
 }
