--- a/capitulos/04ClasificacionTexto.qmd
+++ b/capitulos/04ClasificacionTexto.qmd
@@ -1,3 +1,232 @@
 # Clasificación de Texto
 
 El **objetivo** de la unidad es 
+
+## Paquetes usados {.unnumbered}
+
+```{python}
+#| echo: true
+from microtc.utils import tweet_iterator, load_model, save_model
+from b4msa.textmodel import TextModel
+from EvoMSA.tests.test_base import TWEETS
+from EvoMSA.utils import bootstrap_confidence_interval
+from sklearn.model_selection import StratifiedKFold
+from sklearn.metrics import recall_score, precision_score, f1_score
+from sklearn.naive_bayes import MultinomialNB
+from scipy.stats import norm, multinomial, multivariate_normal
+from scipy.special import logsumexp
+from collections import Counter
+from matplotlib import pylab as plt
+from os.path import join
+import numpy as np
+```
+
+```{python}
+#| echo: false
+from IPython.display import Markdown
+```
+
+
+::: {.content-visible when-format="html"}
+---
+
+**Video explicando la unidad**
+
+---
+:::
+
+## Introducción 
+
+Text Categorization is an NLP task that deals with creating algorithms capable of identifying the category of a text from a set of predefined categories. For example, sentiment analysis belongs to this task, and the aim is to detect the polarity (e.g., positive, neutral, or negative) of a text. Furthermore, different NLP tasks that initially seem unrelated to this problem can be formulated as a classification one such as question answering and sentence entailment, to mention a few. 
+
+Text Categorization can be tackled from different perspectives; the one followed here is to treat it as a supervised learning problem. As in any supervised learning problem, the starting point is a set of pairs, where the first element of the pair is the input and the second one corresponds to the output. Let $\mathcal D = \{(\text{text}_i, y_i) \mid i=1,\ldots, N\}$ where $y \in \{c_1, \ldots c_K\}$ and $\text{text}_i$ is a text. 
+
+## Modelado Probabilistico (Distribución Categórica) {#sec-categorical-distribution}
+
+### Problema Sintético
+
+The description of Bayes’ theorem continues with an example of a Categorical distribution. A Categorical distribution can simulate the drawn of $K$ events that can be encoded as characters, and $\ell$ repetitions can be represented as a sequence of characters. Consequently, the distribution can illustrate the generation sequences associated with different classes, e.g., positive or negative.
+
+The first step is to create the dataset. As done previously, two distributions are defined, one for each class; it can be observed that each distribution has different parameters. The second step is to sample these distributions; the distributions are sampled 1000 times with the following procedure. Each time, a random variable representing the number of outcomes taken from each distribution is drawn from a Normal $\mathcal N(15, 3)$ and stored in the variable `length.` The random variable indicates the number of outcomes for each Categorical distribution; the results are transformed into a sequence, associated to the label corresponding to the positive and negative class, and stored in the list `D.`
+
+```python
+pos = multinomial(1, [0.20, 0.20, 0.35, 0.25])
+neg = multinomial(1, [0.35, 0.20, 0.25, 0.20])
+length = norm(loc=15, scale=3)
+D = []
+m = {k: chr(122 - k) for k in range(4)}
+id2w = lambda x: " ".join([m[_] for _ in x.argmax(axis=1)])
+for l in length.rvs(size=1000):
+    D.append((id2w(pos.rvs(round(l))), 1))
+    D.append((id2w(neg.rvs(round(l))), 0))
+```
+
+The following table shows four examples of this process; the first column contains the sequence, and the second the associated label.
+
+|Text          |Label    |
+|--------------|---------|
+|x w x x z w y | positive       |
+|y w z z z x w | negative       |
+|z x x x z x z w x w | positive |
+|x w z w y z z z z w | negative |
+
+As done previously, the first step is to compute the likelihood given that dataset; considering that the data comes from a Categorical distribution, the procedure to estimate the parameters is similar to the ones used to estimate the prior. The following code estimates the data parameters corresponding to the positive class. It can be observed that the parameters estimated are similar to the ones used to generate the dataset. 
+
+```python
+D_pos = []
+[D_pos.extend(data.split()) for data, k in D if k == 1]
+words, l_pos = np.unique(D_pos, return_counts=True)
+w2id = {v: k for k, v in enumerate(words)}
+l_pos = l_pos / l_pos.sum()
+l_pos
+array([0.25489421, 0.33854064, 0.20773186, 0.1988333 ])
+```
+
+An equivalent procedure is performed to calculate the likelihood of the negative class.
+
+```python
+D_neg = []
+[D_neg.extend(data.split()) for data, k in D if k == 0]
+_, l_neg = np.unique(D_neg, return_counts=True)
+l_neg = l_neg / l_neg.sum()
+```
+
+The prior is estimated with the following code, equivalent to the one used on all the examples seen so far. 
+
+```python
+_, priors = np.unique([k for _, k in D], return_counts=True)
+N = priors.sum()
+prior_pos = priors[1] / N
+prior_neg = priors[0] / N
+```
+
+Once the parameters have been identified, these can be used to predict the class of a given sequence. The first step is to compute the likelihood, e.g., $\mathbb P($w w x z$\mid \mathcal Y)$. It can be observed that the sequence needs to be transformed into tokens which can be done with the `split` method. Then, the token is converted into an index using the mapping `w2id`; once the index is retrieved, it can be used to obtain the parameter associated with the word. The likelihood is the product of all the probabilities; however, this product is computed in log space. 
+
+```python
+def likelihood(params, txt):
+    params = np.log(params)
+    _ = [params[w2id[x]] for x in txt.split()]
+    tot = sum(_)
+    return np.exp(tot)
+```
+
+The likelihood combined with the prior for all the classes produces the evidence, which subsequently is used to calculate the posterior distribution. The posterior is then used to predict the class for all the sequences in $\mathcal D$. The predictions are stored in the variable `hy`.
+
+```python
+post_pos = [likelihood(l_pos, x) * prior_pos for x, _ in D]
+post_neg = [likelihood(l_neg, x) * prior_neg for x, _ in D]
+evidence = np.vstack([post_pos, post_neg]).sum(axis=0)
+post_pos /= evidence
+post_neg /= evidence
+hy = np.where(post_pos > post_neg, 1, 0)
+```
+
+### Clasificador de Texto {#sec-tc-categorical }
+
+The approach followed on text categorization is to treat it as supervised learning problem where the starting point is a dataset $\mathcal D = \{(\text{text}_i, y_i) \mid i=1,\ldots, N\}$ where $y \in \{c_1, \ldots c_K\}$ and $\text{text}_i$ is a text. For example, the next code uses a toy sentiment analysis dataset with four classes: negative (N), neutral (NEU), absence of polarity (NONE), and positive (P).
+
+```python
+D = [(x['text'], x['klass']) for x in tweet_iterator(TWEETS)]
+```
+
+As can be observed, $\mathcal D$ is equivalent to the one used in the [Categorical Distribution](#sec:categorical-distribution) example. The difference is that sequence of letters is changed with a sentence. Nonetheless, a feasible approach is to obtain the tokens using the `split` method. Another approach is to retrieve the tokens using a Tokenizer, as covered in the [Text Normalization](/NLP-Course/topics/05TextNormalization) Section. 
+
+The following code uses the `TextModel` class to tokenize the text using words as the tokenizer; the tokenized text is stored in the variable `D.`
+
+```python
+tm = TextModel(token_list=[-1])
+tok = tm.tokenize
+D = [(tok(x), y) for x, y in D]
+```
+
+Before estimating the likelihood parameters, it is needed to encode the tokens using an index; by doing it, it is possible to store the parameters in an array and compute everything `numpy` operations. The following code encodes each token with a unique index; the mapping is in the dictionary `w2id`. 
+
+```python
+words = set()
+[words.update(x) for x, y in D]
+w2id = {v: k for k, v in enumerate(words)}
+```
+
+Previously, the classes have been represented using natural numbers. The positive class has been associated with the number $1$, whereas the negative class with $0$. However, in this dataset, the classes are strings. It was decided to encode them as numbers to facilitate subsequent operations. The encoding process can be performed simultaneously with the estimation of the prior of each class. Please note that the priors are stored using the logarithm in the variable `priors.` 
+
+```python
+uniq_labels, priors = np.unique([k for _, k in D], return_counts=True)
+priors = np.log(priors / priors.sum())
+uniq_labels = {str(v): k for k, v in enumerate(uniq_labels)}
+```
+
+It is time to estimate the likelihood parameters for each of the classes. It is assumed that the data comes from a Categorical distribution and that each token is independent. The likelihood parameters can be stored in a matrix (variable `l_tokens`) with $K$ rows, each row contains the parameters of the class, and the number of columns corresponds to the vocabulary's size. The first step is to calculate the frequency of each token per class which can be done with the following code. 
+
+```python
+l_tokens = np.zeros((len(uniq_labels), len(w2id)))
+for x, y in D:
+    w = l_tokens[uniq_labels[y]]
+    cnt = Counter(x)
+    for i, v in cnt.items():
+        w[w2id[i]] += v
+```
+
+The next step is to normalize the frequency. However, before normalizing it, it is being used a Laplace smoothing with a value $0.1$. Therefore, the constant $0.1$ is added to all the matrix elements. The next step is to normalize (second line), and finally, the parameters are stored using the logarithm. 
+
+```python
+l_tokens += 0.1
+l_tokens = l_tokens / np.atleast_2d(l_tokens.sum(axis=1)).T
+l_tokens = np.log(l_tokens)
+```
+
+#### Prediction
+
+Once all the parameters have been estimated, it is time to use the model to classify any text. The following function computes the posterior distribution. The first step is to tokenize the text (second line) and compute the frequency of each token in the text. The frequency stored in the dictionary `cnt` is converted into the vector `x` using the mapping function `w2id`. The final step is to compute the product of the likelihood and the prior. The product is computed in log-space; thus, this is done using the likelihood and the prior sum. The last step is to compute the evidence and normalize the result; the evidence is computed with the function `logsumexp.` 
+
+```python
+def posterior(txt):
+    x = np.zeros(len(w2id))
+    cnt = Counter(tm.tokenize(txt))
+    for i, v in cnt.items():
+        try:
+            x[w2id[i]] += v
+        except KeyError:
+            continue
+    _ = (x * l_tokens).sum(axis=1) + priors
+    l = np.exp(_ - logsumexp(_))
+    return l
+```
+
+The posterior function can predict all the text in $\mathcal D$; the predictions are used to compute the model's accuracy. In order to compute the accuracy, the classes in $\mathcal D$ need to be transformed using the nomenclature of the likelihood matrix and priors vector; this is done with the `uniq_labels` dictionary (second line). 
+
+```python
+hy = np.array([posterior(x).argmax() for x, _ in D])
+y = np.array([uniq_labels[y] for _, y in D])
+(y == hy).mean()
+0.974
+```
+
+#### Training
+
+Solving supervised learning problems requires two phases; one is the training phase, and the other is the prediction. The posterior function handles the later phase, and it is missing to organize the code described in a training function. The following code describes the training function; it requires the dataset's parameters and an instance of `TextModel.`
+
+```python
+def training(D, tm):
+    tok = tm.tokenize
+    D =[(tok(x), y) for x, y in D]
+    words = set()
+    [words.update(x) for x, y in D]
+    w2id = {v: k for k, v in enumerate(words)}
+    uniq_labels, priors = np.unique([k for _, k in D], return_counts=True)
+    priors = np.log(priors / priors.sum())
+    uniq_labels = {str(v): k for k, v in enumerate(uniq_labels)}
+    l_tokens = np.zeros((len(uniq_labels), len(w2id)))
+    for x, y in D:
+        w = l_tokens[uniq_labels[y]]
+        cnt = Counter(x)
+        for i, v in cnt.items():
+            w[w2id[i]] += v
+    l_tokens += 0.1
+    l_tokens = l_tokens / np.atleast_2d(l_tokens.sum(axis=1)).T
+    l_tokens = np.log(l_tokens)
+    return w2id, uniq_labels, l_tokens, priors
+```
+
+## Modelado Vectorial {#sec-tc-vectorial} 
+
+xxx
